<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activities.ChangePasswordActivity">

        <include
            android:id="@+id/common_header"
            layout="@layout/common_header" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp270"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/change_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp15"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/old_password"
                android:paddingVertical="@dimen/dp15"
                android:paddingLeft="@dimen/dp20"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/dp15" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/dp15"
                android:paddingLeft="@dimen/dp20"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/dp15" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/conform_password"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/dp15"
                android:paddingLeft="@dimen/dp20"
                android:textColor="@color/gray_white"
                android:textColorHint="@color/black"
                android:textSize="@dimen/dp15" />


            <TextView
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp25"
                android:background="@drawable/colorbtn"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dp20"
                android:paddingVertical="@dimen/dp10"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/dp20" />
        </LinearLayout>
    </LinearLayout>
</layout>